# ambd-tpms

ambd/: core.cpp
lib/: abstractroutingengine.h  vehicleproperty.cpp  vehicleproperty.h
plugins/dbus/: properties.h
plugins/tpms/: CMakeLists.txt  tpmsplugin.cpp  tpmsplugin.h
plugins/websocketsink/: websocketsinkmanager.cpp  websocketsinkmanager.h
plugins/websocketsourceplugin/: websocketsource.cpp
